added the basic html structure

--- a/index.html
+++ b/index.html
@@ -7,13 +7,36 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>World Clock</h1>
-    <footer>
-      This project is coded by Nthabeleng and is
-      <a href="#" target="_blank" rel="noopener noreferrer"
-        >open-sourced on GitHub</a
-      >
-    </footer>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select name="" id="">
+        <option value="">select a city</option>
+        <option value="">Johannesburg</option>
+        <option value="">London</option>
+        <option value="">Tokyo</option>
+        <option value="">New York</option>
+      </select>
+      <div class="cities">
+        <div class="city">Cairo</div>
+        <div class="date">01 June 2024</div>
+        <div class="time">13H00</div>
+
+        <div class="city">Sydney</div>
+        <div class="date">01 June 2024</div>
+        <div class="time">12H00</div>
+
+        <div class="city">Toronto</div>
+        <div class="date">01 June 2024</div>
+        <div class="time">14H00</div>
+      </div>
+      <footer>
+        This project is coded by Nthabeleng and is
+        <a href="#" target="_blank" rel="noopener noreferrer"
+          >open-sourced on GitHub</a
+        >
+      </footer>
+    </div>
+
     <script src="javaScript/index.js"></script>
   </body>
 </html>
