--- a/index.html
+++ b/index.html
@@ -9,33 +9,45 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
+
       <select name="" id="">
-        <option value="">select a city</option>
+        <option value="">Select a city</option>
         <option value="">Johannesburg</option>
         <option value="">London</option>
         <option value="">Tokyo</option>
         <option value="">New York</option>
       </select>
       <div class="cities">
-        <div class="city">Cairo</div>
-        <div class="date">01 June 2024</div>
-        <div class="time">13H00</div>
+        <div>
+          <div class="city">Cairo</div>
+          <div class="date">01 June 2024</div>
+        </div>
 
-        <div class="city">Sydney</div>
-        <div class="date">01 June 2024</div>
-        <div class="time">12H00</div>
-
-        <div class="city">Toronto</div>
-        <div class="date">01 June 2024</div>
-        <div class="time">14H00</div>
+        <div class="time">1:48:15 <small>AM</small></div>
       </div>
-      <footer>
-        This project is coded by Nthabeleng and is
-        <a href="#" target="_blank" rel="noopener noreferrer"
-          >open-sourced on GitHub</a
-        >
-      </footer>
+      <div class="cities">
+        <div>
+          <div class="city">Sydney</div>
+          <div class="date">01 June 2024</div>
+        </div>
+
+        <div class="time">1:48:15 <small>AM</small></div>
+      </div>
+      <div class="cities">
+        <div>
+          <div class="city">Toronto</div>
+          <div class="date">01 June 2024</div>
+        </div>
+
+        <div class="time">1:48:15 <small>AM</small></div>
+      </div>
     </div>
+    <footer>
+      This project is coded by Nthabeleng and is
+      <a href="#" target="_blank" rel="noopener noreferrer"
+        >open-sourced on GitHub</a
+      >
+    </footer>
 
     <script src="javaScript/index.js"></script>
   </body>
