--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World Clock-Nthabeleng</title>
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -17,25 +19,25 @@
         <option value="">Tokyo</option>
         <option value="">New York</option>
       </select>
-      <div class="cities">
-        <div>
+      <div class="cities" id="cairoTime">
+        <div id="cairo">
           <div class="city">Cairo</div>
           <div class="date">01 June 2024</div>
         </div>
-
         <div class="time">1:48:15 <small>AM</small></div>
       </div>
-      <div class="cities">
-        <div>
+
+      <div class="cities" id="sydneyTime">
+        <div id="sydney">
           <div class="city">Sydney</div>
           <div class="date">01 June 2024</div>
         </div>
 
         <div class="time">1:48:15 <small>AM</small></div>
       </div>
-      <div class="cities">
-        <div>
-          <div class="city">Toronto</div>
+      <div class="cities" id="qatarTime">
+        <div id="qatar">
+          <div class="city">Qatar</div>
           <div class="date">01 June 2024</div>
         </div>
 
