--- a/index.html
+++ b/index.html
@@ -12,36 +12,38 @@
     <div class="container">
       <h1>World Clock</h1>
 
-      <select name="" id="">
+      <select name="" id="city">
         <option value="">Select a city</option>
-        <option value="">Johannesburg</option>
-        <option value="">London</option>
-        <option value="">Tokyo</option>
-        <option value="">New York</option>
+        <option value="Africa/Johannesburg">Johannesburg</option>
+        <option value="Europe/London">London</option>
+        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="America/New_York">New York</option>
       </select>
-      <div class="cities" id="cairoTime">
-        <div id="cairo">
-          <div class="city">Cairo</div>
-          <div class="date">01 June 2024</div>
-        </div>
-        <div class="time">1:48:15 <small>AM</small></div>
-      </div>
-
-      <div class="cities" id="sydneyTime">
-        <div id="sydney">
-          <div class="city">Sydney</div>
-          <div class="date">01 June 2024</div>
+      <div id="allCities">
+        <div class="cities" id="cairoTime">
+          <div id="cairo">
+            <div class="city">Cairo</div>
+            <div class="date">01 June 2024</div>
+          </div>
+          <div class="time">1:48:15 <small>AM</small></div>
         </div>
 
-        <div class="time">1:48:15 <small>AM</small></div>
-      </div>
-      <div class="cities" id="qatarTime">
-        <div id="qatar">
-          <div class="city">Qatar</div>
-          <div class="date">01 June 2024</div>
-        </div>
+        <div class="cities" id="sydneyTime">
+          <div id="sydney">
+            <div class="city">Sydney</div>
+            <div class="date">01 June 2024</div>
+          </div>
 
-        <div class="time">1:48:15 <small>AM</small></div>
+          <div class="time">1:48:15 <small>AM</small></div>
+        </div>
+        <div class="cities" id="qatarTime">
+          <div id="qatar">
+            <div class="city">Qatar</div>
+            <div class="date">01 June 2024</div>
+          </div>
+
+          <div class="time">1:48:15 <small>AM</small></div>
+        </div>
       </div>
     </div>
     <footer>
